# GalleonFS

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  test-cluster.ps1  test-cluster.sh  test-multi-node-vfs.ps1  test-vfs.ps1  test-vfs.sh  test_vfs.ps1
.claude/: settings.local.json
crates/galleon-cli/: Cargo.toml
crates/galleon-cli/src/: lib.rs  main.rs
crates/galleon-cli/src/commands/: admin.rs  backup.rs  cluster.rs  device.rs  mod.rs  volume.rs
crates/galleon-common/: Cargo.toml
crates/galleon-common/src/: config.rs  crypto.rs  error.rs  lib.rs  metrics.rs  network.rs  types.rs  utils.rs  volume_topology.rs
crates/galleon-coordinator/: Cargo.toml
crates/galleon-coordinator/src/: api.rs  cluster.rs  consensus.rs  health.rs  lib.rs  main.rs  metadata.rs  migration.rs  placement.rs  topology.rs  volume_manager.rs
crates/galleon-gateway/: Cargo.toml
crates/galleon-gateway/src/: auth.rs  lib.rs  main.rs
crates/galleon-metrics/: Cargo.toml
crates/galleon-metrics/src/: lib.rs  main.rs
crates/galleon-storage-node/: Cargo.toml
crates/galleon-storage-node/src/: block_allocator.rs  chunk_manager.rs  compression.rs  consistency.rs  device_manager.rs  encryption.rs  erasure_coding.rs  io_engine.rs  lib.rs  main.rs  recovery.rs  replication.rs  server.rs  storage_engine.rs  striping.rs  tiering.rs
crates/galleon-volume-agent/: Cargo.toml
crates/galleon-volume-agent/src/: fuse_fs.rs  lib.rs  main.rs
src/: backup.rs  cli.rs  cluster.rs  daemon.rs  fuse_fs.rs  lib.rs  main.rs  migration.rs  qos.rs  replication.rs  replication_mount_test.rs  security.rs  storage.rs  vfs_service.rs  volume_mount.rs
src/cli/: client.rs  mod.rs
src/core/: types.rs
src/core/types/: inode.rs  ipc.rs  mod.rs  node.rs  volume.rs
src/daemon/: client.rs  config.rs  ipc.rs  mod.rs  server.rs  volume.rs  watcher.rs
src/vfs/: cluster.rs  event_handler.rs  file_mapping.rs  mod.rs  replication.rs
src/vfs/replication/: manager.rs  mod.rs  pipeline.rs  placement.rs  tracker.rs  types.rs  workload.rs
src_old/: backup.rs  cross_platform_vfs.rs  fuse_fs.rs  lib.rs  migration.rs  monitoring.rs  security.rs  snapshot.rs  virtual_fs.rs  volume.rs
test_storage_node2/metrics/: 0f848eed-d474-4205-81c7-8b2e9ad268b7.metrics  bf391c9c-b11d-4349-b9d2-fcf728e18805.metrics
tests/: integration_tests.rs
