[package]
name = "galleonfs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "galleonfs"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
bincode = "2.0.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
clap = { version = "4.5.45", features = ["derive"] }
uuid = { version = "1.18.0", features = ["v4", "serde"] }
anyhow = "1.0.99"
thiserror = "2.0.14"
crc32fast = "1.5.0"
async-trait = "0.1.89"
chrono = { version = "0.4.41", features = ["serde"] }
rand = "0.9.2"
base64 = "0.22.1"
serde_json = "1.0.142"
# Filesystem watching
notify = "8.2.0"

# Cross-platform VFS support
[target.'cfg(unix)'.dependencies]
fuser = { version = "0.15.1", optional = true }
libc = { version = "0.2.175", optional = true }

[target.'cfg(windows)'.dependencies]
# winfsp = { version = "0.8", optional = true }  # Commented out - crate is yanked
windows = { version = "0.61.3", features = [
    "Win32_Foundation",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
], optional = true }

[features]
default = ["vfs"]
vfs = []  # VFS without FUSE dependencies for demonstration
fuse = ["fuser", "libc"]  # Optional FUSE support
# winfsp-support = ["winfsp", "windows"]  # Commented out - winfsp crate is yanked

[dev-dependencies]
tempfile = "3.20.0"