[package]
name = "galleon-common"
version = "0.1.0"
edition = "2021"
description = "Shared libraries and types for GalleonFS distributed storage system"

[dependencies]
# Core async runtime
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
bincode = { workspace = true }
rmp-serde = { workspace = true }
toml = { workspace = true }

# Networking
tonic = { workspace = true }
prost = { workspace = true }
hyper = { workspace = true }

# System and crypto
libc = { workspace = true }
nix = { workspace = true }
ring = { workspace = true }
aes-gcm = { workspace = true }
blake3 = { workspace = true }
sha2 = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
metrics = { workspace = true }
humantime = { workspace = true }
byte-unit = { workspace = true }
sysinfo = "0.29"
num_cpus = "1.16"
get_if_addrs = "0.5"
page_size = { workspace = true }
aligned-vec = { workspace = true }
crc32fast = { workspace = true }
xxhash-rust = { workspace = true }

# High-performance data structures
dashmap = { workspace = true }
parking_lot = { workspace = true }
crossbeam = { workspace = true }
ahash = { workspace = true }

[build-dependencies]
tonic-build = "0.10"